feat: auth endpoints
