# internal/handler/http/v1/banner.go
@@ -23,20 +23,27 @@ type BannerService interface {
 	Delete(ctx context.Context, tagID, featureID *int) error
 }
 
+type AuthService interface {
+	Login(ctx context.Context, login string, password string) (string, error)
+	RegisterNewUser(ctx context.Context, login string, password string) error
+	IsAdmin(ctx context.Context, token string) (bool, error)
+}
+
 type Router struct {
 	l *zap.Logger
 	s BannerService
+	a AuthService
 }
 
-func New(s BannerService) *Router {
+func New(s BannerService, a AuthService) *Router {
 	return &Router{
 		s: s,
+		a: a,
 	}
 }
 
 func (r *Router) GetBanner(c *gin.Context, params api.GetBannerParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.Admin {
-		c.Status(http.StatusForbidden)
+	if !r.adminVerify(c, params.Token) {
 		return
 	}
 
@@ -62,8 +69,7 @@ func (r *Router) GetBanner(c *gin.Context, params api.GetBannerParams) {
 }
 
 func (r *Router) PostBanner(c *gin.Context, params api.PostBannerParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.Admin {
-		c.Status(http.StatusForbidden)
+	if !r.adminVerify(c, params.Token) {
 		return
 	}
 
@@ -114,8 +120,7 @@ func (r *Router) PostBanner(c *gin.Context, params api.PostBannerParams) {
 }
 
 func (r *Router) DeleteBannerId(c *gin.Context, id int, params api.DeleteBannerIdParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.Admin {
-		c.Status(http.StatusForbidden)
+	if !r.adminVerify(c, params.Token) {
 		return
 	}
 
@@ -136,8 +141,7 @@ func (r *Router) DeleteBannerId(c *gin.Context, id int, params api.DeleteBannerI
 }
 
 func (r *Router) PatchBannerId(c *gin.Context, id int, params api.PatchBannerIdParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.Admin {
-		c.Status(http.StatusForbidden)
+	if !r.adminVerify(c, params.Token) {
 		return
 	}
 
@@ -182,15 +186,17 @@ func (r *Router) PatchBannerId(c *gin.Context, id int, params api.PatchBannerIdP
 }
 
 func (r *Router) GetUserBanner(c *gin.Context, params api.GetUserBannerParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.User && us != domain.Admin {
-		c.Status(http.StatusForbidden)
-		return
+	if params.Token == nil || *params.Token == "" {
+		c.AbortWithStatus(http.StatusUnauthorized)
 	}
+	if _, err := r.a.IsAdmin(c, *params.Token); err != nil {
+		c.AbortWithStatus(http.StatusForbidden)
+	}
+
 	if params.UseLastRevision == nil {
 		u := false
 		params.UseLastRevision = &u
 	}
-
 	content, err := r.s.GetActiveContentByTagFeatureID(c, params.TagId, params.FeatureId, *params.UseLastRevision)
 	if err != nil {
 		if errors.Is(err, domain.ErrBannerNotFound) {
@@ -208,10 +214,10 @@ func (r *Router) GetUserBanner(c *gin.Context, params api.GetUserBannerParams) {
 }
 
 func (r *Router) DeleteBanner(c *gin.Context, params api.DeleteBannerParams) {
-	if us := c.GetString(domain.UserStatusHeader); us != domain.Admin {
-		c.Status(http.StatusForbidden)
+	if !r.adminVerify(c, params.Token) {
 		return
 	}
+
 	if params.TagId == nil && params.FeatureId == nil {
 		msg := domain.ErrTagOrFeatureRequired.Error()
 		c.JSON(http.StatusBadRequest, api.ErrorResponse{
@@ -229,4 +235,92 @@ func (r *Router) DeleteBanner(c *gin.Context, params api.DeleteBannerParams) {
 		return
 	}
 	c.Status(http.StatusAccepted)
+}
+
+func (r *Router) PostAuthLogin(c *gin.Context) {
+	var requestBody api.UserRequestBody
+
+	if err := c.Bind(&requestBody); err != nil {
+		r.l.Error("can't bind request body", zap.Error(err))
+		msg := domain.ErrInternalServerError.Error()
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Error: &msg,
+		})
+		return
+	}
+
+	token, err := r.a.Login(c, requestBody.Login, requestBody.Password)
+	if err != nil {
+		if errors.Is(err, domain.ErrInvalidCredentials) {
+			msg := err.Error()
+			c.JSON(http.StatusBadRequest, api.ErrorResponse{
+				Error: &msg,
+			})
+			return
+		}
+		msg := domain.ErrInternalServerError.Error()
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Error: &msg,
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, api.PostAuthLoginResponse{
+		Token: token,
+	})
+}
+
+func (r *Router) PostAuthRegister(c *gin.Context) {
+	var requestBody api.UserRequestBody
+	if err := c.Bind(&requestBody); err != nil {
+		r.l.Error("can't bind request body", zap.Error(err))
+		msg := domain.ErrInternalServerError.Error()
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Error: &msg,
+		})
+		return
+	}
+	if err := validateUserRequestBody(requestBody); err != nil {
+		msg := err.Error()
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Error: &msg,
+		})
+		return
+	}
+
+	err := r.a.RegisterNewUser(c, requestBody.Login, requestBody.Password)
+	if err != nil {
+		if errors.Is(err, domain.ErrUserExists) {
+			msg := err.Error()
+			c.JSON(http.StatusConflict, api.ErrorResponse{
+				Error: &msg,
+			})
+			return
+		}
+		msg := domain.ErrInternalServerError.Error()
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Error: &msg,
+		})
+		return
+	}
+	c.Status(http.StatusCreated)
+}
+
+func (r *Router) adminVerify(c *gin.Context, token *string) bool {
+	if token == nil || *token == "" {
+		c.Status(http.StatusUnauthorized)
+		return false
+	}
+	if admin, err := r.a.IsAdmin(c, *token); err != nil || !admin {
+		c.Status(http.StatusForbidden)
+		return false
+	}
+	return true
+}
+
+func validateUserRequestBody(body api.UserRequestBody) error {
+	if body.Login == "" || body.Password == "" {
+		return domain.ErrUserLoginPassword
+	}
+	return nil
 }
